--- a/baseballValue.Rmd
+++ b/baseballValue.Rmd
@@ -655,21 +655,98 @@ summ(offensive_fit)
 
 From this, we can see that the three variables we picked are all statistically significant due to the low p-values. Additionally, we see a positive relationship between walks and offensive value. This makes sense, as the more someone draws walks, the more times they're on base, and consequently the more runs they can score (and value is derived from runs).
 
-On the opposite end, we see that strikeouts detract from value at roughly the same rate that walks add to value. Additionally, a one-unit increase in ISO leads to a 15 win increase in Offensive wins above replacement. This means that on average, going from an ISO of .100 to .200 will increased expected wins above replacement by 1.5.
+On the opposite end, we see that strikeouts detract from value at roughly the same rate that walks add to value. Additionally, a one-unit increase in ISO leads to a 5.1 win increase in Offensive wins above replacement. This means that on average, going from an ISO of .100 to .200 will increased expected wins above replacement by 0.5. Similarly, a one-unit increase in OPS will lead to a 5.8 win increase (where going from a .700 OPS to a .800 OPS increases expected wins by 0.6)
 
-**Also address OPS in the above example**
+##Testing for collinearity
 
+One important concept to pay attention to is the idea of multicollinearity. One assumption of linear regressions is that your independent variables aren't perfectly correlated. Essentially, you want to make sure that your explanatory variables aren't explaining part of each other in addition to the dependent variable. This is a key element of statistics.
+
+In order to test for multicollinearity, we'll need the "car" library and the following code:
+```{r}
+library(car)
+car::vif(offensive_fit)
+```
+
+For the vif() function, the values start at 1 and can increase essentially forever. A value of 1 means that your explanatory variable is not at all correlated with other variables. A value greater than 5 means that you have some strong multicollinearity and your variables need to be reconsidered. Here, our highest value is 3.5, so we're good to proceed with the explanatory variables we've chosen.
+
+##Creating our model
+
+Now we'll need to start adding in the components that will make up our model. Above, we noted that walk rate, strikeout rate, ISO, and OPS were all statistically significant factors and had meaningful coefficients. For our model, we'll need to incorporate the factors that make up ISO and OPS, and we'll also be using the context-free "BB+" and "SO+" variables we created.
+
+Selecting our compoments will start like this:
+```{r}
+pre_diff_score_subset <- pre_breakout%>%
+                        select(name_common, PA, AB, H, X2B, X3B, HR, BB, SO, SF, HBP, SO_plus, BB_plus)
+```
+
+One quick housekeeping note is that we'll need to create separate variables for SO+ and BB+ so that we can properly average them for the players we chose. We'll need to weigh them by the amount of at-bats each player had, since the number of at-bats varies from 105 to 379. We'll do so as follows:
+```{r}
+pre_diff_score_subset$adj_SO_plus <- pre_diff_score_subset$PA * pre_diff_score_subset$SO_plus
+pre_diff_score_subset$adj_BB_plus <- pre_diff_score_subset$PA * pre_diff_score_subset$BB_plus
+```
+
+Now we'll create a new row in our data frame that is a sum of all the totals for each of the players. We'll need the "janitor" library for this.
+```{r}
+library(janitor)
+diff_score_subset <- pre_diff_score_subset %>%
+  adorn_totals("row")
+```
+
+###Creating variables again
+
+Now we'll need to create the variables we'll actually use for our model based on the available data in our table. We already created them in our "Batting_Value_Salary" dataset, so we'll just quickly create them again for our new dataset.
+
+True SO+ and BB+:
+```{r}
+test_SO_plus <- diff_score_subset$adj_SO_plus / diff_score_subset$PA
+diff_score_subset$True_SO_plus <- round(test_SO_plus, digits = 2)
+
+test_BB_plus <- diff_score_subset$adj_BB_plus / diff_score_subset$PA
+diff_score_subset$True_BB_plus <- round(test_BB_plus, digits = 2)
+```
+
+Batting average:
+```{r}
+test_BA <- diff_score_subset$H / diff_score_subset$AB
+diff_score_subset$batting_average <- round(test_BA, digits = 3)
+```
+
+On-base percentage:
+```{r}
+test_OBP <- (diff_score_subset$H + diff_score_subset$BB + diff_score_subset$HBP) / 
+  (diff_score_subset$AB + diff_score_subset$BB + diff_score_subset$HBP + diff_score_subset$SF)
+diff_score_subset$on_base_percentage <- round(test_OBP, digits = 3)
+```
+
+Slugging percentage:
+```{r}
+test_SLG <- ((diff_score_subset$H - diff_score_subset$X2B - diff_score_subset$X3B - diff_score_subset$HR) + 
+               (diff_score_subset$X2B * 2) + (diff_score_subset$X3B * 3) + (diff_score_subset$HR * 4))/
+    (diff_score_subset$AB)
+diff_score_subset$slugging_percentage <- round(test_SLG, digits = 3)
+```
+
+ISO:
+```{r}
+diff_score_subset$ISO <- (diff_score_subset$slugging_percentage) - (diff_score_subset$batting_average)
+```
+
+Finally, we'll create a subset that just has our "Total" values. This will help us with working on our difference score calculations.
+```{r}
+total_sub <- subset(diff_score_subset, name_common == "Total")
+View(total_sub)
+```
+
+##Creating our difference score formula
 
 **Notes to self**
 
-On 9/2, we'll want to do the following things:
+On 9/3, we'll want to do the following things:
 
-1. Test for collinearity and explain why it's important
-2. Add in components that will make up difference score model
-3. Create variables and 'Total' column, then create variables again
 4. Do the difference scores
 5. Subset by year and age
 6. Identify which players the model chose, and why the ones we don't choose aren't eligible
 7. Do the same as above where we explain how much excess value we've identified, and how much that's worth,
   except do it (as well as the above stuff) in a table.
-8. Clean everything up and edit  
+8. Clean everything up and edit
+9. Create R file that just has the code (with comments) without any of the R Markdown stuff
